syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.api";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package com.api;

service KeyManagerGrpcService {
  rpc cadastraPixKey (KeyManagerGrpcRequest) returns (KeyManagerGrpcResponse) {}
}

service RemovePixKeyService {
  rpc excluiPixKey (PixKeyChaveRequest) returns (ExcluiPixKeyResponse) {}
}

enum TipoChave {
  UNKNOW_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta {
  UNKNOW_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message KeyManagerGrpcRequest {
  string idCliente = 1;
  TipoChave tipodechave = 2;
  string chave = 3;
  TipoConta tipodeconta = 4;
}

message KeyManagerGrpcResponse {
  string idCliente = 1;
  string pixId = 2;
}

message PixKeyChaveRequest {
  string idCliente = 1;
  string pixId = 2;
}

message ExcluiPixKeyResponse{
  string message = 1;
}